Fixed button sizes on mobile

--- a/index.css
+++ b/index.css
@@ -8,8 +8,6 @@ body{
 
 .my-button{
     z-index: 2;
-    width: 50px;
-    height: 50px;
     border: 2px solid #1a8fe3;
     background-size: contain !important;
     border-radius: 5%;
@@ -42,4 +40,8 @@ body{
 
 #defaultCanvas0{
     z-index: -1;
+}
+
+.noty_body{
+    font-size: 2vh !important;
 }
